--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
     },
     "require": {
         "gnugat/search-engine": "^0.2",
-        "symfony/http-kernel": "^2.3",
-        "symfony/dependency-injection": "^2.3",
-        "symfony/config": "^2.3",
-        "symfony/yaml": "^2.3"
+        "symfony/http-kernel": "^2.3|^3.0",
+        "symfony/dependency-injection": "^2.3|^3.0",
+        "symfony/config": "^2.3|^3.0",
+        "symfony/yaml": "^2.3|^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.6",
-        "symfony/framework-bundle": "^2.3",
-        "symfony/finder": "^2.3"
+        "phpunit/phpunit": "^4.6|^5.0",
+        "symfony/framework-bundle": "^2.3|^3.0",
+        "symfony/finder": "^2.3|^3.0"
     }
 }
